--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
         <div class="container">
           <h1 class="visually-hidden">Portfolio</h1>
           <ul class="portfolio-filter list">
-            <li>
+            <li class="portfolio-item">
               <button class="portfolio-btn" type="button">All</button>
             </li>
             <li>
@@ -199,13 +199,50 @@
     <!------------------footer----------------->
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo" href="./index.html"
-          ><span class="footer-span">Web</span>studio</a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-wrap">
+          <div class="footer-logo-wrap">
+            <a class="footer-logo" href="./index.html"
+              ><span class="footer-span">Web</span>studio</a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="footer-soc">
+            <h2 class="soc-title">Social media</h2>
+            <ul class="soc-list list">
+              <li class="soc-item">
+                <a class="soc-link" href="">
+                  <svg class="soc-icon" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="soc-item">
+                <a class="soc-link" href="">
+                  <svg class="soc-icon" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="soc-item">
+                <a class="soc-link" href="">
+                  <svg class="soc-icon" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="soc-item">
+                <a class="soc-link" href="">
+                  <svg class="soc-icon" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
