--- a/index.html
+++ b/index.html
@@ -63,38 +63,13 @@
       <section class="skills">
         <div class="container">
           <h2 class="visually-hidden">Our skills</h2>
-          <ul class="skills-icons list">
-            <li class="skills-icon-li">
+          <ul class="skills-list list">
+            <li>
               <div class="icon-li">
                 <svg width="64" height="64">
                   <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
-            </li>
-            <li class="skills-icon-li">
-              <div class="icon-li">
-                <svg width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-clock"></use>
-                </svg>
-              </div>
-            </li>
-            <li class="skills-icon-li">
-              <div class="icon-li">
-                <svg width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
-                </svg>
-              </div>
-            </li>
-            <li class="skills-icon-li">
-              <div class="icon-li">
-                <svg width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
-                </svg>
-              </div>
-            </li>
-          </ul>
-          <ul class="skills-list list">
-            <li>
               <h3 class="skills-title">Strategy</h3>
               <p class="skills-text">
                 Our goal is to identify the business problem to walk away with
@@ -102,6 +77,11 @@
               </p>
             </li>
             <li>
+              <div class="icon-li">
+                <svg width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="skills-title">Punctuality</h3>
               <p class="skills-text">
                 Bring the key message to the brand's audience for the best price
@@ -109,6 +89,11 @@
               </p>
             </li>
             <li>
+              <div class="icon-li">
+                <svg width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="skills-title">Diligence</h3>
               <p class="skills-text">
                 Research and confirm brands that present the strongest digital
@@ -116,6 +101,11 @@
               </p>
             </li>
             <li>
+              <div class="icon-li">
+                <svg width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="skills-title">Technologies</h3>
               <p class="skills-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -349,7 +339,7 @@
       <!--------------customers-------------->
       <section class="customers">
         <div class="container">
-          <h2 class="visually-hidden">Customers</h2>
+          <h2 class="customers-title">Customers</h2>
           <ul class="customers-list list">
             <li class="list-item">
               <a href="" class="customers-link">
